<resources>
    <string name="app_name">Field Trip - Desa Wisata Kandri</string>


    <string name="hint_email">Email/No. Telepon</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="hint_namalengkap">Nama Lengkap</string>
    <string name="hint_email1">Email Anda</string>
    <string name="hint_username">Username</string>
    <string name="hint_notelpon">Nomor Telepon</string>
    <string name="hint_namasd">Nama Sekolah</string>
    <string name="hint_tanggalbooking">Tanggal Booking</string>
    <string name="hint_jumlahsiswa">Jumlah Siswa</string>
    <string name="hint_jumlahguru">Jumlah Guru Pendamping</string>
    <string name="hint_jumlahsupir">Jumlah Supir</string>
    <string name="transfer">Transfer ke Nomor Rekening yang ada dibawah ini, sesuai nilai yang tertera pada "jumlah yang harus dibayarkan. </string>
    <string name="arahankonfirmasi">  Jika sudah melakukan transfer silahkan konfirmasi pembayaran pada menu utama. Disitu silahkan upload bukti pembayaran anda.</string>

    <string name="title_beranda">Beranda</string>
    <string name="title_umkm">UMUKM Kandri</string>
    <string name="title_akun">Akun</string>

    <string name="paketsingkong">❖ Explore Sendang (Belajar ekosistem sendang) \n ❖ Explore Sawah  \n ❖ Menanam Padi \n ❖ Explore Singkong \n ❖ Belajar Menanam Singkong \n ❖ Panen Singkong \n ❖ Kunjungan ke UMKM Pengolahan Singkong \n  ❖ Explore Kandang Sapi dan Kambing  \n ❖ Explore Kolam Ikan \n ❖ Panen Ikan Lele  </string>
    <string name="paketsusu">❖ Explore Sendang (Belajar ekosistem sendang) \n ❖ Explore Sawah  \n ❖ Menanam Padi \n ❖ Explore Kandang Kambing  \n ❖ Explore Kandang Sapi   \n ❖ Menikmati Susu Sapi Segar \n ❖ Oleh-oleh Olahan Susu \n   ❖ Explore Kolam Ikan \n ❖ Panen Ikan Lele  </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
