<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".PaketSingkong.InputDataCustomers">

<!--    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">-->


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33ffffff"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:textColor="@color/colorPutih"
            android:paddingBottom="80dp"
            android:text="Isi Data dengan benar"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp"
            android:textStyle="bold" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_namalengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtnamalengkap"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_namalengkap"
                android:singleLine="true"
                android:inputType="none"
                android:editable="false"
                android:text="" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_nomortelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtnomorhp"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_notelpon"
                android:inputType="none"
                android:editable="false"
                android:singleLine="true"

                android:text="" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_namasd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtnamasd"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_namasd"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:text="" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txttanggalbooking"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_tanggalbooking"
                 />

            <ImageButton
                android:id="@+id/btntanggal"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_weight="1"

                android:src="@drawable/date"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txtjumlahsiswa"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_jumlahsiswa"
                android:inputType="number"
                android:singleLine="true"
                android:text="" />

            <Button
                android:id="@+id/btncekharga"
                android:layout_width="180dp"
                android:layout_height="35dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@drawable/rec_gradient"
                android:elevation="9dp"
                android:layout_weight="1"
                android:text="Cek Harga"
                android:src="@drawable/date"
                />
        </LinearLayout>

  <!--      <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_jumlahsiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtjumlahsiswa2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_jumlahsiswa"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:text="" />
        </android.support.design.widget.TextInputLayout>-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_jumlahguru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtjumlahguru"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_jumlahguru"
                android:inputType="number"
                android:singleLine="true"
                android:text="" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_jumlahsupir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtjumlahsupir"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/hint_jumlahsupir"
                android:inputType="number"
                android:singleLine="true"
                android:text="" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jumlah yang harus dibayar"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/jumlahharga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp0"
            android:textStyle="italic|bold"

            android:textColor="@color/colormerah"
            android:textSize="21sp"/>

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:paddingTop="6dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" >
            <RadioButton
                android:id="@+id/radiobayarfull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="13dp"
                android:text="Bayar Full" />

            <RadioButton
                android:id="@+id/radiobayardp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15dp"
                android:text="Bayar DP 40%" />

        </RadioGroup>

        <Button
            android:id="@+id/btnbayar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rec_gradient"
            android:elevation="10dp"
            android:paddingLeft="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/kotak"
            android:paddingRight="50dp"
            android:text="BAYAR"
            android:textColor="#fff"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>
    </ScrollView>
<!--</LinearLayout>-->
</RelativeLayout>